--- a/src/style.css
+++ b/src/style.css
@@ -34,13 +34,37 @@ li {
 .list-item {
     display: grid;
     grid-template-rows: auto auto auto;
-    grid-template-columns: 1fr 1fr 100px 90px;
+    grid-template-columns: 1fr 1fr 90px;
     border: 1px solid black;
     border-radius: 50px 50px;
     background: rgb(229, 255, 112);
     margin: 10px 10px;
     padding: 15px 15px;
     gap: 20px 10px;
+
+    .list-item-title {
+    grid-area: 1/1/2/2;
+    }
+
+    .list-item-description {
+        grid-area: 2/1/4/2;
+    }
+
+    .list-item-duedate {
+        grid-area: 1/2/2/3;
+    }
+
+    .list-item-note {
+        grid-area: 2/2/3/3;
+    }
+
+    .list-item-checklist {
+        grid-area: 3/2/4/3;
+    }
+
+    .list-item-options-icon {
+        grid-area: 1/3/2/4;
+    }
 }
 
 .list-item-collapsed {
@@ -58,7 +82,7 @@ li {
     }
 }
 
-.list-item > * {
+.list-item > .list-item-checklist,.list-item-description,.list-item-duedate,.list-item-note,.list-item-title {
     background: white;
     margin: 5px;
     border-radius: 20px 20px;
@@ -67,28 +91,27 @@ li {
     box-shadow: 3px 2px rgb(170, 170, 170);
 }
 
-
-.list-item > .list-item-title {
-    grid-area: 1/1/2/2;
+.list-item > .list-item-options {
+    display: none;
+    position: absolute;
+    background-color: #fff;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    border: 1px solid #ccc;
+}
+.list-item-options-icon:hover {
+    display: block;
+    position: absolute;
+    right: 30px;
+    border-radius: 10px;
+    z-index: 100;
 }
 
-.list-item > .list-item-description {
-    grid-area: 2/1/4/2;
+.list-item-delete:hover, .list-item-set-priority:hover{
+    transition: background-color 0.3s;
+    background-color: rgb(236, 236, 236);
 }
 
-.list-item > .list-item-duedate {
-    grid-area: 1/2/2/3;
+.list-item-options-icon{
+    width: 50px;
+    height: 50px;
 }
-
-.list-item > .list-item-note {
-    grid-area: 2/2/3/3;
-}
-
-.list-item > .list-item-checklist {
-    grid-area: 3/2/4/3;
-}
-
-.list-item-remove {
-    grid-area: 1/4/2/5;
-}
-
