--- a/src/style.css
+++ b/src/style.css
@@ -34,7 +34,7 @@ li {
 .list-item {
     display: grid;
     grid-template-rows: auto auto auto;
-    grid-template-columns: 1fr 1fr 90px;
+    grid-template-columns: 1fr 1fr 50px;
     border: 1px solid black;
     border-radius: 50px 50px;
     background: rgb(229, 255, 112);
@@ -116,4 +116,8 @@ li {
 .list-item-options-icon{
     width: 50px;
     height: 50px;
+    svg{
+        width: 100%;
+        height: 100%;
+    }
 }
