--- a/src/style.css
+++ b/src/style.css
@@ -94,7 +94,6 @@ li {
     background-color: #fff;
     max-height: 0;
     overflow: hidden;
-    transition: max-height 0.5s ease;
 }
 .list-item-options-container:hover {
     .list-item-options{
@@ -105,6 +104,7 @@ li {
         max-height: 200px;
         border-radius: 10px;
         z-index: 100;
+        overflow: visible;
     }
 }
 
@@ -114,24 +114,18 @@ li {
     background-color: #fff;
     max-height: 0px;
     overflow: hidden;
-    transition: max-height 0.5s ease;
+    top: 60%; 
+    left: -90%;  
 }
 
+.list-item-set-priority:hover + .priorities{ 
+    max-height: 200px;
+    border-radius: 10px;
+    z-index: 1001;
+}
+
+.list-item-delete:hover,
 .list-item-set-priority:hover{
-    transition: background-color 0.3s;
-    background-color: rgb(236, 236, 236);
-    .priorities{
-        display: block;
-        position: absolute;
-        top: 100%; 
-        left: 0;   
-        max-height: 200px;
-        border-radius: 10px;
-        z-index: 101;
-    }
-}
-
-.list-item-delete:hover{
     transition: background-color 0.3s;
     background-color: rgb(236, 236, 236);
 }
@@ -143,4 +137,16 @@ li {
         width: 100%;
         height: 100%;
     }
+}
+
+.list-item.low{
+    background-color: green;
+}
+
+.list-item.medium{
+    background-color: yellow;
+}
+
+.list-item.high{
+    background-color: red;
 }
