--- a/src/style.css
+++ b/src/style.css
@@ -99,7 +99,7 @@ li {
     .list-item-options{
         display: block;
         position: absolute;
-        top: 100%; 
+        top: 50%; 
         left: 0;   
         max-height: 200px;
         border-radius: 10px;
@@ -118,10 +118,11 @@ li {
     left: -90%;  
 }
 
-.list-item-set-priority:hover + .priorities{ 
-    max-height: 200px;
-    border-radius: 10px;
-    z-index: 1001;
+.list-item-set-priority:hover + .priorities,
+.list-item-set-priority + .priorities:hover {
+  max-height: 200px;
+  opacity: 1;
+  pointer-events: auto;
 }
 
 .list-item-delete:hover,
@@ -137,6 +138,13 @@ li {
         width: 100%;
         height: 100%;
     }
+}
+
+.priority.high:hover,
+ .priority.medium:hover,
+ .priority.low:hover{
+    transition: background-color 0.3s;
+    background-color: rgb(236, 236, 236);
 }
 
 .list-item.low{
