--- a/src/style.css
+++ b/src/style.css
@@ -187,6 +187,13 @@ li {
     height: 100%;
 }
 
+.add-item{
+    font-size: 2rem;
+    background: none;
+    border: none;
+    font-weight: 900;
+}
+
 .add-item-modal{
     position: absolute;
     width: 50%;
@@ -217,6 +224,7 @@ li {
     box-shadow: none;
     padding: 3px;
     background: none;
+    aspect-ratio: 1;
 }
 
 .change-status-checklist-item{
@@ -239,7 +247,13 @@ li {
     padding: 4px 10px;
     &:focus{
         outline: none;
-        border: 1px solid grey;
-        border-radius: 5px;
+        border: 1px solid rgb(179, 179, 179);
+        border-radius: 8px;
+    }
+}
+
+.checklist-item:has(.finished){
+    input{
+        color: rgb(161, 161, 161);
     }
 }
