--- a/src/style.css
+++ b/src/style.css
@@ -8,6 +8,7 @@
 * {
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
 }
 
 ul {
@@ -32,6 +33,20 @@ li {
 .available-lists {
     color: red;
     grid-area: 2/1/3/2;
+}
+
+.title-input{
+    font-size: 1.5rem;
+    width: 80%;
+    outline: none;
+    border: 1px solid rgb(204, 204, 204);
+    border-radius: 10px;
+    padding: 5px 10px;
+    &:focus{
+        transition: border-width 0.5s ease-in-out,
+            border-color 0.5s ease-in-out;
+        border: 2px solid rgb(184, 223, 184);
+    }
 }
 
 .current-list-container {
